--- a/2-2,三种计算图.md
+++ b/2-2,三种计算图.md
@@ -168,15 +168,8 @@ tf.Tensor(b'hello world', shape=(), dtype=string)
 import datetime
 
 # 创建日志
-import os
 stamp = datetime.datetime.now().strftime("%Y%m%d-%H%M%S")
-logdir = os.path.join('data', 'autograph', stamp)
-
-## 在 Python3 下建议使用 pathlib 修正各操作系统的路径
-# from pathlib import Path
-# stamp = datetime.datetime.now().strftime("%Y%m%d-%H%M%S")
-# logdir = str(Path('./data/autograph/' + stamp))
-
+logdir = './data/autograph/%s' % stamp
 writer = tf.summary.create_file_writer(logdir)
 
 #开启autograph跟踪
@@ -209,8 +202,8 @@ with writer.as_default():
 
 ```
 
-如果对本书内容理解上有需要进一步和作者交流的地方，欢迎在公众号"算法美食屋"下留言。作者时间和精力有限，会酌情予以回复。
+如果对本书内容理解上有需要进一步和作者交流的地方，欢迎在公众号"Python与算法之美"下留言。作者时间和精力有限，会酌情予以回复。
 
 也可以在公众号后台回复关键字：**加群**，加入读者交流群和大家讨论。
 
-![算法美食屋二维码.jpg](./data/算法美食屋二维码.jpg)
+![image.png](./data/Python与算法之美logo.jpg)
